<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_appointment"
            android:title="@string/appointment" />
        <item
            android:id="@+id/nav_consult"
            android:icon="@drawable/ic_consult"
            android:title="@string/consultation" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_folder"
            android:title="@string/folder" />
        <item
            android:id="@+id/nav_hospital"
            android:icon="@drawable/ic_hospital"
            android:title="@string/hospital" />

        <item
            android:id="@+id/nav_description"
            android:icon="@drawable/ic_description"
            android:title="A propos" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

    </group>
</menu>